--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://password.xiaowuleyi.com" target="_blank" class="project-card" style="background-image: url('https://tc.xiaowuleyi.com/file/1756219987469_image.png')">
+                <a href="https://pd.btchao.com.com" target="_blank" class="project-card" style="background-image: url('https://tc.xiaowuleyi.com/file/1756219987469_image.png')">
                     <div class="project-content">
                         <h3>随机密码在线生成</h3>
                         <p>个人安全工具</p>
@@ -203,7 +203,7 @@
 
                 <a href="https://tu.xiaowuleyi.com" target="_blank" class="project-card" style="background-image: url('https://tc.xiaowuleyi.com/file/1754984504282_tu.jpeg')">
                     <div class="project-content">
-                        <h3>个人摄影集</h3>
+                        <h3>个人摄影集（维护）</h3>
                         <p>记录生活，分享美好瞬间</p>
                         <div class="project-tags">
                             <span class="tag">摄影</span>
