--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://pd.btchao.com.com" target="_blank" class="project-card" style="background-image: url('https://tc.xiaowuleyi.com/file/1756219987469_image.png')">
+                <a href="https://pd.btchao.com" target="_blank" class="project-card" style="background-image: url('https://tc.xiaowuleyi.com/file/1756219987469_image.png')">
                     <div class="project-content">
                         <h3>随机密码在线生成</h3>
                         <p>个人安全工具</p>
